# inplace_vector

./: .cmake-format  .codespellignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  macos.yml  windows.yml
Include/Beman/InplaceVector/: InplaceVector.hpp  inplace_vector.hpp
cmake/: CMakeDarwinPresets.json  CMakeGenericPresets.json  CMakeLinuxPresets.json  CMakeWindowsPresets.json  config.cmake.in  gcovr.cfg.in
examples/: CMakeLists.txt  fibonacci.cpp
include/beman/inplace_vector/: inplace_vector.hpp
src/Beman/InplaceVector/: CMakeLists.txt  inplace_vector.cpp  inplacevector.cpp
src/Beman/InplaceVector/tests/: CMakeLists.txt  InplaceVector.test.cpp
src/beman/inplace_vector/: CMakeLists.txt  inplace_vector.cpp
src/beman/inplace_vector/tests/: CMakeLists.txt  inplace_vector.test.cpp
tests/beman/inplace_vector/: CMakeLists.txt  constexpr.test.cpp  inplace_vector.test.cpp  ref_impl.test.cpp  spec.test.cpp  spec.test2.experimental.cpp
